[package]
name = "pvz_widescreen"
version = "0.1.0"
authors = ["henryj"]
edition = "2021"

[dependencies]
ntapi = "0.3.6"
winapi = { version = "0.3.9", features = ["memoryapi"] }
byteorder = "1.4.3"
iced-x86 = { version = "1.16.0", features = ["code_asm"]}

[build-dependencies]
walkdir = "2.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"