[package]
name = "healthbar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "libloaderapi"] }
byteorder = "1.4.3"
iced-x86 = { version = "1.16.0", features = ["code_asm"]}
pvz = {path = "../pvz_model"}
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3