[package]
name = "mod_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "libloaderapi", "processthreadsapi", "winbase", "synchapi"] }
pelite = "0.9.0"
log = "0.4.14"
widestring = "0.5.1"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }