[package]
name = "pvz"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.121"

[dependencies.windows]
version = "0.33.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation", 
    "Win32_System_Kernel", 
    "Win32_Graphics_DirectDraw",
    "Win32_UI_WindowsAndMessaging",
]